# Orema

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  TODO.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  proxy.ts  skills-lock.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
actions/: approbation-remises.ts  audit.ts  auth-supabase.ts  auth.ts  avis.ts  backup.ts  billing.ts  caisse.ts  categories.ts  clients.ts  csv.ts  ecrans.ts  employes.ts  livraison.ts  mobile-money.ts  notifications.ts  parametres.ts  permissions.ts  pin-unlock.ts  preparation.ts  produits.ts  rapports.ts  register.ts  seed-data.ts  sessions.ts  sms.ts  split-bill.ts  stocks.ts  subscriptions.ts  supplements.ts  sync-users.ts  tables.ts  tarification.ts  ventes.ts
app/: error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx  providers.tsx  sitemap.ts
components/: README.md  session-validator.tsx
docs/: QUICK_TEST.md  README.md  SESSION_CLEANUP_SUMMARY.md
hooks/: use-mounted.tsx  use-permissions.ts  use-plan-gate.ts  use-produits.ts  useFloorPlanHistory.ts  useFloorPlanKeyboard.ts  useFullscreen.ts  useKdsAlerts.ts  useNetworkStatus.ts  useNotificationBridge.ts  useOfflineData.ts  useOfflineSync.ts  useRealtimeNotifications.ts  useRealtimeOrders.ts  useRealtimeStock.ts  useRealtimeTables.ts  useWebPrinter.ts
lib/: action-types.ts  audit.ts  blog-data.ts  docs-data.ts  (+11 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+675 files in other folders)
